src/App.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Nunito Sans', sans-serif;
}
body {
  background-color: #fff;
}

.App {
  text-align: center;
  max-width: 728px;
  min-width: 320px;
  margin: 0 auto;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 15px;
}

.App header {
  background-color: #3988cb;
  height: 10vh;
  min-height: 100px;
  color: white;
  position: fixed;
  width: 100%;
  max-width: 728px;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 99;
  padding: 10px;
  box-sizing: border-box;
}

.weather-container {
  width: 25%;
  height: 100%;
  overflow: hidden;
}

.weather-container .weather-info {
  display: flex;
  justify-content: center;
  align-items: center;
}

.weather-img-wrapper {
  height: 50px;
  width: 50px;
}

.weather-img-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.chat-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: #fff;
  position: relative;
}

main {
  padding: 10px 0;
  height: 80vh;
  overflow-y: auto;
  /* overflow-x: hidden; */
  display: flex;
  flex-direction: column;
  width: 100%;
}
.signIn-container {
  position: fixed;
  top: 20vh;
  width: clamp(320px, 40%, 400px);
  display: flex;
  flex-direction: column;
  background-color: #3988cb;
  font-size: 1.5rem;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 10px 20px;
  border-radius: 10px;
  align-items: center;
  padding-top: 5vh;
}
.error-container {
  position: fixed;
  top: 20vh;
  height: 5vh;
  background-color: rgb(230, 107, 107);
  width: clamp(320px, 40%, 400px);
  max-width: 500px;
  z-index: 1;
  border-radius: 10px 10px 0 0;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 0.8rem;
  padding: 10px 12px;
}
.signIn-form {
  display: flex;
  flex-direction: column;
  max-width: 450px;
  justify-content: center;
  align-items: center;
}

.signIn-form label {
  font-size: 1rem;

  color: #fff;
  text-align: left;
}

.signIn-form input {
  line-height: 1.5;
  width: clamp(200px, 300px, 80%);
  font-size: 1rem;
  background: #fff;
  outline: none;
  border: none;
  margin: 10px auto;
  padding: 10px;
}

.signIn-container p {
  width: clamp(200px, 212px, 300px);
  font-size: 14px;
  color: #fff;
}

#show-more-message {
  display: none;
  font-size: 0.7rem;
}
.message-panel {
  height: 10vh;
  min-height: 50px;
  position: fixed;
  bottom: 0;
  background-color: #3988cb;
  width: 100%;
  max-width: 728px;
  min-width: 320px;

  font-size: 1.5rem;
}
.message-panel-form {
  display: flex;
  height: 10vh;
  min-height: 50px;
}

.message-panel .chat-btns {
  width: 15%;
  background-color: #3988cb;
  border-right: 1px solid white;
}

.msg-input {
  line-height: 1.5;
  width: 100%;
  font-size: 1.5rem;
  background: rgb(58, 58, 58);
  color: white;
  outline: none;
  border: none;
  padding: 0 10px;
}

.chat-btns {
  background-color: #3988cb;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 1.25rem;
  border-radius: 12px;
}

.chat-btns:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.chat-btns:hover {
  color: rgba(41, 41, 41, 1);
}
.sign-up,
.sign-in {
  /* color: #fff;
  background: #128a26;
  width: clamp(200px, 400px, 80%);
  margin: 10px auto;
  border-radius: 5px; */
  background: rgba(255, 255, 255, 1);
  color: rgba(41, 41, 41, 1);
  width: clamp(200px, 212px, 300px);
  border-radius: 50px;
  border: 1px solid rgb(168, 168, 168);
  padding: 7px 16px 9px;
  line-height: 20px;
  font-weight: 400;
  font-size: 1rem;
  margin: 20px 10px 10px;
}

.sign-in:hover,
.sign-up:hover {
  transform: scale(1.1);
  transition: all 0.2s ease-in;
  background-color: rgb(164, 238, 174);
}

.sign-up svg,
.sign-in svg {
  margin-top: -2px;
  margin-right: 8px;
  vertical-align: middle;
}

.toggle-link {
  cursor: pointer;
  color: #d4f8da;
  font-size: 1rem;
  padding: 0 2px;
  border: 1px solid #fff;
  border-radius: 25px;
}
.toggle-link:hover {
  background-color: rgb(164, 238, 174);
  color: rgba(0, 0, 0, 0.9);
}
.sign-out {
  background-color: #3988cb;
}
.sign-out:hover {
  color: rgb(240, 116, 116);
}
#mediaCapture {
  display: none;
}

#img-btn {
  font-size: 3rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

#emoji-btn {
  font-size: 2rem;
  padding: 0 2px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.emoji-mart {
  position: absolute;
  bottom: 10vh;
  left: 10px;
}
p.messageText {
  max-width: 500px;
  line-height: 24px;
  padding: 10px 20px;
  border-radius: 5px;
  position: relative;
  color: white;
  text-align: center;
  word-wrap: break-word;
  word-break: break-all;
  text-align: left;
}

.message {
  display: flex;
  align-items: center;
}

.sent {
  flex-direction: row-reverse;
}

.sent .messageText {
  color: white;
  background: #0b93f6;
  align-self: flex-end;
  right: 5px;
}
/* add tail to message box */
.sent .messageText::after {
  content: '';
  position: absolute;
  right: 15px;
  top: 50%;
  width: 0;
  height: 0;
  border: 20px solid transparent;
  border-left-color: #0b93f6;
  border-right: 0;
  border-bottom: 0;
  margin-top: -10px;
  margin-right: -20px;
}
.received .messageText {
  background: #e5e5ea;
  color: black;
  left: 5px;
}

.received .messageText::after {
  content: '';
  position: absolute;
  left: 15px;
  top: 50%;
  width: 0;
  height: 0;
  border: 20px solid transparent;
  border-right-color: #e5e5ea;
  border-left: 0;
  border-bottom: 0;
  margin-top: -10px;
  margin-left: -20px;
}

.profilePhoto {
  width: 40px;
  height: 40px;
  border-radius: 5px;
  margin: 2px 5px;
  cursor: pointer;
}

.photoMessage {
  max-width: 200px;
  max-height: 200px;
  border-radius: 5px;
  margin: 0px 5px 12px;
  object-fit: contain;
  cursor: pointer;
}

/* The photo message Modal (background) */
.photoMessage-modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.9);
}

.modal-photo {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

/* Add Animation - Zoom in the Modal */
.modal-photo {
  animation-name: zoom;
  animation-duration: 0.6s;
}

@keyframes zoom {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}

/* The Close Button */
.closeModal {
  position: absolute;
  top: 10vh;
  right: 7vw;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}

.closeModal:hover,
.closeModal:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

/* message profile photo modal */
.profile-modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.9);
}
.close-profile-modal {
  position: absolute;
  top: -20px;
  right: 0;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}
.close-profile-modal:hover,
.close-profile-modal:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}
.profile-photo-container {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  position: relative;
}
.big-profile-Photo {
  width: inherit;
}
/* user profile update modal */
#update-profile-container {
  display: none;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgb(55, 120, 183);
  background-color: rgba(55, 120, 183, 0.9);
  position: fixed;
  left: 0;
  top: 0;
  padding-top: 100px;
}

.update-profile-form {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  font-size: 1rem;
  border-radius: 10px;
  box-shadow: 2px 2px 5px;
  backdrop-filter: blur(10px);
  background: rgba(255, 255, 255, 0.2);
  height: 40%;
  min-height: 300px;
  width: clamp(300px, 60%, 400px);
  border: 1px solid #fff;
  padding: 10px;
  margin: 10px auto;
}

.update-profile-form svg {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 2rem;
}

/* hide the file type input, use label instead */
input[type='file'] {
  display: none;
}

#profile-label {
  border: 1px solid #ccc;
  display: inline-block;
  padding: 15px 32px;
  cursor: pointer;
  width: 200px;
}

#profile-label:hover {
  background-color: rgb(164, 238, 174);
}
.loading-container {
  background: #fff;
  height: 35px;
  width: 35px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  left: 50%;
}

.update-profile-form input {
  line-height: 1.5;
  width: 200px;
  font-size: 1rem;
  background: #fff;
  outline: none;
  border: none;
  margin: 10px auto;
  padding: 10px;
}

.update-profile-form button {
  width: 200px;
}
.timeStamp {
  text-align: center;
  font-size: 0.7rem;
}

.user-info {
  display: flex;
  align-items: center;
}

.app-error-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 50vh;
  border: 1px solid red;
  border-radius: 15px;
  margin-top: 100px;
  background-color: rgb(252, 157, 157);
}
@media only screen and (max-width: 768px) {
  .App header {
    min-width: 320px;
  }
  .App h1,
  .App .chat-btns {
    font-size: 1rem;
  }
  .App h2 {
    font-size: 0.8rem;
  }
  .App span {
    font-size: 0.7rem;
  }
  .chat-btns {
    padding: 5px;
  }
  .signIn-form input {
    font-size: 1rem;
  }
  .signIn-container p {
    font-size: 1rem;
    padding: 5px 5px;
    margin: 0 5px;
  }
  .message-panel input {
    font-size: 1rem;
  }
  .emoji-mart {
    position: absolute;
    bottom: 5vh;
    left: 0;
  }
  p.messageText {
    max-width: 280px;
    line-height: 18px;
  }
}

@media only screen and (max-width: 480px) {
  .App h1,
  .signIn-form input {
    font-size: 0.8rem;
    padding: 2px;
  }
  .signIn-container p {
    font-size: 0.8rem;
    padding: 5px 5px;
    margin: 0 5px;
  }
  .signIn-form label {
    font-size: 0.8rem;
  }
  .signIn-form a {
    font-size: 0.8rem;
  }
}

